cm4all-beng-proxy (0.3) unstable; urgency=low

  * python: added class Response

 --

cm4all-beng-proxy (0.2) unstable; urgency=low

  * don't quote text/xml widgets
  * widget-resolver: pass widget_pool to widget_class_lookup()
  * widget-registry: allocate widget_class from widget_pool
  * widget-stream: eliminated the async operation proxy, because the
    operation cannot be aborted before the constructor returns
  * widget-stream: don't clear the "delayed" stream in the response() callback
  * rewrite-uri: trigger istream_read(delayed) after istream_delayed_set()
  * doc: clarified XSLT integration

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 Nov 2008 15:28:54 +0100

cm4all-beng-proxy (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Nov 2008 11:59:36 +0100