@@ -10,7 +10,6 @@ const struct widget_class root_widget_class = {
     .address = {
         .type = RESOURCE_ADDRESS_NONE,
     },
-    .type = WIDGET_TYPE_BENG,
     .is_container = true,
     .stateful = false,
 };
